--- a/Preprocessing.ipynb
+++ b/Preprocessing.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Preprocessing.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNYrFJ+410G9uzpdSWGx08i",
+      "authorship_tag": "ABX9TyOxUQFvrMLOjN5s2bbDYSzd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -14,7 +14,8 @@
     },
     "language_info": {
       "name": "python"
-    }
+    },
+    "accelerator": "TPU"
   },
   "cells": [
     {
@@ -29,13 +30,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "LpMZyQ5ae8Iy"
       },
       "outputs": [],
       "source": [
-        ""
+        "import numpy"
       ]
     }
   ]
