comparison between word2vec,tfid,bow using svm

--- a/Preprocessing2.ipynb
+++ b/Preprocessing2.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1mqOsX5oPUNOJtYXBUlCeOa1qoMhpdtdp",
-      "authorship_tag": "ABX9TyOf0Y8xMiIXu28aOtZsrqT2",
+      "authorship_tag": "ABX9TyOIKMSIyVQPhYLyre/RYhJP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1324,58 +1324,6 @@
     {
       "cell_type": "code",
       "source": [
-        "# #Naive Bayes with TFID word Embedding without other_cyberbullying class\n",
-        "\n",
-        "\n",
-        "\n",
-        "# clf = CountVectorizer()\n",
-        "# # display(X_train)\n",
-        "# X_train_cv =  clf.fit_transform(X_train)\n",
-        "# X_test_cv = clf.transform(X_test)\n",
-        "# X_train_cv\n",
-        "# #associating weights to the different words based on their frequency\n",
-        "# tf_transformer = TfidfTransformer(use_idf=True).fit(X_train_cv)\n",
-        "# X_train_tf = tf_transformer.transform(X_train_cv)\n",
-        "# X_test_tf = tf_transformer.transform(X_test_cv)\n",
-        "# nb_clf = MultinomialNB()\n",
-        "# nb_clf.fit(X_train_tf, y_train)\n",
-        "# nb_pred = nb_clf.predict(X_test_tf)\n",
-        "# print('Classification Report for Naive Bayes:\\n',classification_report(y_test, nb_pred, target_names=sentiments))\n",
-        "# # conf_matrix(y_test,nb_pred,'Naive Bayes Sentiment Analysis\\nConfusion Matrix', sentiments)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "LB7Up2M-i0IG",
-        "outputId": "db40319d-b7f5-47c8-a378-ac4c25ab20d0"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Classification Report for Naive Bayes:\n",
-            "               precision    recall  f1-score   support\n",
-            "\n",
-            "    religion       0.84      0.97      0.90      1579\n",
-            "         age       0.81      0.98      0.89      1566\n",
-            "   ethnicity       0.90      0.92      0.91      1542\n",
-            "      gender       0.88      0.86      0.87      1465\n",
-            "not bullying       0.87      0.48      0.62      1276\n",
-            "\n",
-            "    accuracy                           0.86      7428\n",
-            "   macro avg       0.86      0.84      0.84      7428\n",
-            "weighted avg       0.86      0.86      0.85      7428\n",
-            "\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "#Naive Bayes with TFID with other_cyberbullying class\n",
         "from sklearn.feature_extraction.text import CountVectorizer\n",
         "from sklearn.feature_extraction.text import TfidfTransformer\n",
@@ -1430,6 +1378,90 @@
     {
       "cell_type": "code",
       "source": [
+        "#SVM with Bag of Word Embedding\n",
+        "from sklearn.svm import SVC\n",
+        "svm_classifier = SVC()\n",
+        "svm_classifier.fit(X_train_cv, y_train)\n",
+        "pred = svm_classifier.predict(X_test_cv)\n",
+        "\n",
+        "print('Classification Report for Logistic Regression:\\n',classification_report(y_test, pred, target_names=sentiments))\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_7SraOwVHvHG",
+        "outputId": "82e57463-879e-4a16-c7dd-c28cc64a8c99"
+      },
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Classification Report for Logistic Regression:\n",
+            "                      precision    recall  f1-score   support\n",
+            "\n",
+            "           religion       0.96      0.95      0.95      1588\n",
+            "                age       0.98      0.98      0.98      1574\n",
+            "          ethnicity       0.98      0.98      0.98      1546\n",
+            "             gender       0.93      0.84      0.88      1493\n",
+            "       not bullying       0.67      0.56      0.61      1393\n",
+            "other_cyberbullying       0.54      0.76      0.63      1041\n",
+            "\n",
+            "           accuracy                           0.85      8635\n",
+            "          macro avg       0.84      0.84      0.84      8635\n",
+            "       weighted avg       0.87      0.85      0.86      8635\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#SVM with TFID Word Embedding\n",
+        "from sklearn.svm import SVC\n",
+        "svm_classifier = SVC()\n",
+        "svm_classifier.fit(X_train_tf, y_train)\n",
+        "pred = svm_classifier.predict(X_test_tf)\n",
+        "\n",
+        "print('Classification Report for Logistic Regression:\\n',classification_report(y_test, pred, target_names=sentiments))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "HMB0LBjpESxk",
+        "outputId": "e14d3e7c-98cd-4279-f779-1de69f36b7d4"
+      },
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Classification Report for Logistic Regression:\n",
+            "                      precision    recall  f1-score   support\n",
+            "\n",
+            "           religion       0.96      0.95      0.95      1588\n",
+            "                age       0.94      0.97      0.96      1574\n",
+            "          ethnicity       0.98      0.98      0.98      1546\n",
+            "             gender       0.93      0.83      0.88      1493\n",
+            "       not bullying       0.62      0.63      0.63      1393\n",
+            "other_cyberbullying       0.57      0.63      0.60      1041\n",
+            "\n",
+            "           accuracy                           0.85      8635\n",
+            "          macro avg       0.83      0.83      0.83      8635\n",
+            "       weighted avg       0.85      0.85      0.85      8635\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "#Naive Bayes  with Gaussian Naive Bayes with word2Vec Embedding\n",
         "from sklearn.feature_extraction.text import CountVectorizer\n",
         "from sklearn.feature_extraction.text import TfidfTransformer\n",
@@ -1443,29 +1475,7 @@
         "pca_model.fit(X_w2v)\n",
         "\n",
         "print(\"Sum of variance ratios: \",sum(pca_model.explained_variance_ratio_))\n",
-        "X_w2v = pca_model.transform(X_w2v)\n",
-        "# X_train2, X_test2, y_train2, y_test2 = train_test_split(X, y1, test_size=0.2, stratify=y1, random_state=seed_value)\n",
-        "# # # X_train_vectors_w2v = \n",
-        "# # # X_test_vectors_w2v = modelw.transform(X_test2)\n",
-        "\n",
-        "\n",
-        "# # display(df.sentiment.value_counts())\n",
-        "\n",
-        "# # #Splitting the validation dataset\n",
-        "# X_train2, X_valid2, y_train2, y_valid2 = train_test_split(X_train2, y_train2, test_size=0.1, stratify=y_train2, random_state=seed_value)\n",
-        "# (unique, counts) = np.unique(y_train, return_counts=True)\n",
-        "# np.asarray((unique, counts)).T\n",
-        "\n",
-        "\n",
-        "# # X_train_vectors_w2v = modelw.transform(X_train2)\n",
-        "# # X_test_vectors_w2v = modelw.transform(X_test2)\n",
-        "# nb_clf = GaussianNB()\n",
-        "# display(X_train2)\n",
-        "# nb_clf.fit(X_train2, y_train2)\n",
-        "# nb_pred = nb_clf.predict(X_test2)\n",
-        "# print(X_train2.shape)\n",
-        "# print('Classification Report for Naive Bayes:\\n',classification_report(y_test2, nb_pred, target_names=sentiments))\n",
-        "# # # conf_matrix(y_test,nb_pred,'Naive Bayes Sentiment Analysis\\nConfusion Matrix', sentiments)"
+        "X_w2v = pca_model.transform(X_w2v)"
       ],
       "metadata": {
         "colab": {
@@ -1569,7 +1579,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# print(X_train_vectors_w2v.shape)\n",
+        "# Logistic Regression with Word2Vec Embedding\n",
         "# print(len(w2v['classi']))\n",
         "from sklearn.linear_model import LogisticRegression\n",
         "logisticRegr = LogisticRegression()\n",
@@ -1627,40 +1637,7 @@
     {
       "cell_type": "code",
       "source": [
-        "from sklearn.svm import SVC\n",
-        "\n",
-        "svm_classifier = SVC()\n",
-        "svm_classifier.fit(X_train2, y_train2)\n",
-        "svm_classifier.score(X_test2,y_test2)"
-      ],
-      "metadata": {
-        "id": "pgrupSMkASY5",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 362
-        },
-        "outputId": "fb42b527-7240-46d9-a2ab-2ab241e024c3"
-      },
-      "execution_count": 40,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "KeyboardInterrupt",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-40-6c17218f4996>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0msvm_classifier\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mSVC\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0msvm_classifier\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_train2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_train2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0msvm_classifier\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mscore\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_test2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0my_test2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/sklearn/svm/_base.py\u001b[0m in \u001b[0;36mfit\u001b[0;34m(self, X, y, sample_weight)\u001b[0m\n\u001b[1;32m    253\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    254\u001b[0m         \u001b[0mseed\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrnd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrandint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0miinfo\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"i\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmax\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 255\u001b[0;31m         \u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msample_weight\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msolver_type\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkernel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrandom_seed\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mseed\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    256\u001b[0m         \u001b[0;31m# see comment on the other call to np.iinfo in this file\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    257\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/sklearn/svm/_base.py\u001b[0m in \u001b[0;36m_dense_fit\u001b[0;34m(self, X, y, sample_weight, solver_type, kernel, random_seed)\u001b[0m\n\u001b[1;32m    331\u001b[0m             \u001b[0mepsilon\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mepsilon\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    332\u001b[0m             \u001b[0mmax_iter\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmax_iter\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 333\u001b[0;31m             \u001b[0mrandom_seed\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mrandom_seed\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    334\u001b[0m         )\n\u001b[1;32m    335\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
+        "# SVM with Word2vec Embedding\n",
         "from sklearn.svm import SVC\n",
         "svm_classifier = SVC()\n",
         "svm_classifier.fit(X_train2, y_train2)\n",
@@ -1669,10 +1646,35 @@
         "print('Classification Report for Logistic Regression:\\n',classification_report(y_test2, pred, target_names=sentiments))"
       ],
       "metadata": {
-        "id": "4zQYu1dYDCUW"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "4zQYu1dYDCUW",
+        "outputId": "b78a38e2-ed35-43ec-f928-f74b251e636a"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Classification Report for Logistic Regression:\n",
+            "                      precision    recall  f1-score   support\n",
+            "\n",
+            "           religion       0.87      0.91      0.89      1588\n",
+            "                age       0.95      0.96      0.96      1574\n",
+            "          ethnicity       0.90      0.92      0.91      1546\n",
+            "             gender       0.93      0.69      0.79      1493\n",
+            "       not bullying       0.55      0.69      0.62      1393\n",
+            "other_cyberbullying       0.52      0.47      0.49      1041\n",
+            "\n",
+            "           accuracy                           0.80      8635\n",
+            "          macro avg       0.79      0.77      0.78      8635\n",
+            "       weighted avg       0.81      0.80      0.80      8635\n",
+            "\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
